--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-light bg-light">
+      <nav class="navbar navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">To-Do list</a>
+          <a class="navbar-brand" href="#"><h4>To-Do list</h4></a>
         </div>
       </nav>
       <!-- form filler start -->
